# ml-control-plane

./: .gitignore  LICENSE  README.md  pyproject.toml
mlcp/: __init__.py  __main__.py  api.py  models.py  orchestrator.py  runner.py  store.py
mlcp/runners/: __init__.py  builtin.py  sklearn_runner.py
tests/: test_api.py  test_orchestrator.py  test_store.py
